--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,4 +4,9 @@
 }
 html,body{
     font-family: IranSans;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    background-color: whitesmoke;
+    direction: rtl;
 }
