--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,7 +13,9 @@ $rounded_standard:15px;
     height: $control_height;
     border-radius: $rounded_standard;
     border:none;
-    background: rgb(234, 248, 32);
+    background: rgb(255, 218, 7);
     font-weight: bold;
     color: rgb(94, 93, 93);
+    cursor: pointer;
+    box-shadow:  0 0 15px rgb(168, 167, 167);
 }
