--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,10 +3,14 @@
     src: url('../assets/iranyekanwebregular.e31c09af.woff2');
 }
 html,body{
-    font-family: IranSans;
+    font-family: IranSans !important;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     background-color: whitesmoke;
     direction: rtl;
+}
+.Toastify__toast-body{
+    font-family: IranSans;
+    font-size: 13px;
 }
