--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -3,14 +3,15 @@
     src: url('../assets/iranyekanwebregular.e31c09af.woff2');
 }
 html,body{
-    font-family: IranSans !important;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     background-color: whitesmoke;
     direction: rtl;
 }
-.Toastify__toast-body{
+*{
     font-family: IranSans;
+}
+.Toastify__toast-body{
     font-size: 13px;
 }
