--- a/src/pages/Vehicle/index.scss
+++ b/src/pages/Vehicle/index.scss
@@ -10,7 +10,7 @@
 .main {
   position: relative;
   .form {
-    height: 200px;
+    min-height: 200px;
     width: 60%;
     position: absolute;
     background-color: white;
@@ -37,7 +37,7 @@
     .row {
       @extend %row;
       margin-top: 5px;
-      input{
+      input {
         width: 100%;
         height: 40px;
         border: none;
@@ -47,15 +47,21 @@
         padding-left: 10px;
         outline: none;
       }
-      img{
+      img {
         mix-blend-mode: color-burn;
         position: absolute;
         z-index: 700;
         width: 20px;
         left: 20px;
       }
+      .vehicles_options {
+        display: flex;
+        align-items: center;
+        font-size: 13px;
+        color: gray;
+      }
     }
-    .marginTop{
+    .marginTop {
       margin-top: 20px;
     }
   }
