--- a/src/pages/Vehicle/index.module.scss
+++ b/src/pages/Vehicle/index.module.scss
@@ -12,10 +12,13 @@
   .form {
     min-height: 200px;
     width: 60%;
+    min-width: 400px;
     position: absolute;
     background-color: white;
     z-index: 500;
     bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     border-radius: 15px;
     box-shadow: 0 0 15px rgb(160, 159, 159);
     padding: 10px;
