--- a/src/pages/Login/index.module.scss
+++ b/src/pages/Login/index.module.scss
@@ -33,6 +33,7 @@
         input {
           @extend %input-text;
           margin-top: 10px;
+          padding-left: 10px;
         }
         button {
           margin-top: 20px;
